# RJMCMC-1.0.11

./: .gitignore  AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README.md  README.txt  aclocal.m4  config.status  configure  configure-gadi.sh  configure-nci.sh  configure-raijin.sh  configure-ubuntu-win10.sh  configure.ac  help.txt  libtool  rjmcmc.pc  rjmcmc.pc.in
autom4te.cache/: output.1  requests  (+2 more)
examples/1d/partitioned/fm/functionfit/: Makefile  Makefile.am  Makefile.in  README  functionfit.c  functionfit.py  plot_mean.py  plot_misfit.py  plot_partition_count_histogram.py  plot_partition_x_hist.py
examples/1d/partitioned/fm/functionfitf/: Makefile  Makefile.am  Makefile.in  README  functionfitf.f90  functionfitf.py  plot_mean.py  plot_partition_count_histogram.py  plot_partition_x_hist.py
examples/1d/partitioned/fm/gaussian/: Makefile  Makefile.am  Makefile.in  README  gaussian.c  gaussian.py  plot_mean.py  plot_partition_count_histogram.py  plot_partition_x_hist.py
examples/1d/partitioned/fm/natural/: Makefile  Makefile.am  Makefile.in  README  data.txt  mkdata.py  natural.c  natural.py  plot_mean.py  plot_misfit.py  plot_partition_count_histogram.py  plot_partition_x_hist.py
examples/1d/partitioned/fm/regression/: Makefile  Makefile.am  Makefile.in  README  plot_mean.py  plot_misfit.py  plot_partition_count_histogram.py  plot_partition_x_hist.py  regression.c  regression.py
examples/1d/partitioned/fm/step/: Makefile  Makefile.am  Makefile.in  README  plot_mean.py  plot_misfit.py  plot_partition_count_histogram.py  plot_partition_x_hist.py  step.c  step.py
examples/1d/partitioned/fm/synthdata/: Makefile  Makefile.am  Makefile.in  README  data.txt  plot_mean.py  plot_misfit.py  plot_partition_count_histogram.py  plot_partition_x_hist.py  synthdata.c  synthdata.py
examples/1d/partitioned/fm/velocityf/: Makefile  Makefile.am  Makefile.in  README  plot_credible.py  plot_mean.py  plot_partition_count_histogram.py  plot_partition_x_hist.py  velocityf.f90  velocityf.py
examples/1d/partitioned/regression/multiquad/: Makefile  Makefile.am  Makefile.in  README  data.txt  mkdata.py  multiquad.c  multiquad.py  plot_credible.py  plot_mean.py  plot_median.py  plot_misfit.py  plot_mode.py  plot_partition_count_histogram.py  plot_partition_x_hist.py
examples/1d/partitioned/regression/multistep/: Makefile  Makefile.am  Makefile.in  README  data.txt  mkdata.py  multistep.c  multistep.py  plot_credible.py  plot_mean.py  plot_median.py  plot_misfit.py  plot_mode.py  plot_partition_count_histogram.py  plot_partition_x_hist.py
examples/1d/partitioned/regression/sawtooth/: Makefile  Makefile.am  Makefile.in  README  data.txt  mkdata.py  plot_credible.py  plot_mean.py  plot_median.py  plot_misfit.py  plot_mode.py  sawtooth.c
examples/1d/partitioned/regression/zeromultistep/: Makefile  Makefile.am  Makefile.in  README  data.txt  plot_credible.py  plot_mean.py  plot_median.py  plot_misfit.py  plot_mode.py  plot_partition_count_histogram.py  plot_partition_x_hist.py  zeromultistep.c  zeromultistep.py
examples/1d/single/fm/simpleimage/: Makefile  Makefile.am  Makefile.in  image.c  image.h  mkimage.c  simpleimage.c
examples/1d/single/fm/spherefit/: Makefile  Makefile.am  Makefile.in  README  spherefit.c
examples/1d/single/regression/cubic/: Makefile  Makefile.am  Makefile.in  README  cubic.c  cubic.py  data.txt  mkdata.py  plot_credible.py  plot_lambda.py  plot_mean.py  plot_median.py  plot_misfit.py  plot_mode.py  plot_order.py
examples/2d/partitioned/fm/mpi_regression/: Makefile  Makefile.am  Makefile.in  README  mpi_regression.c  mpi_regression_checkpoint.c  mpi_regression_restart.c  plot.py
examples/2d/partitioned/fm/regression/: Makefile  Makefile.am  Makefile.in  README  data.txt  mkdata.py  plot.py  plot_mean.py  plot_median.py  plot_partition_count_histogram.py  regression.c
examples/2d/partitioned/regression/ausmoho/: Makefile  Makefile.am  Makefile.in  ausmoho.c  data.txt  plot.py  plot_mean.py  plot_misfit.py
examples/2d/partitioned/regression/callbackex/: Makefile  Makefile.am  Makefile.in  README  callbackex.c  data.txt  mkdata.py  plot.py  plot_mean.py  plot_median.py
include/: Makefile  Makefile.am  Makefile.in
include/rjmcmc/: bbox2d.h  curvefit.h  dataset1d.h  dataset2d.h  delaunay2d.h  engine.h  forwardmodel.h  forwardmodel_f.h  forwardmodel_mpi.h  forwardmodel_util.h  forwardmodelparameter.h  part1d_forwardmodel.h  part1d_natural_rj.h  part1d_regression_rj.h  part1d_zero.h  part2d_forwardmodel.h  part2d_regression_rj.h  position_map1d.h  position_map2d.h  position_map2d_delaunay.h  position_map2d_linear.h  position_map2d_quadtree.h  quadtree.h  regression.h  regression_mpi.h  resultset1d.h  resultset1dfm.h  resultset2d.h  resultset2dfm.h  resultsetfm.h  rjmcmc.h  rjmcmc_config.h  rjmcmc_config.h.in  rjmcmc_debug.h  rjmcmc_defines.h  rjmcmc_random.h  rjmcmc_util.h  rjmcmcf.h  rjmcmcf_mpi.h  single1d_regression.h  (+4 more)
src/: Makefile  Makefile.am  Makefile.in  bbox2d.c  curvefit.c  dataset1d.c  dataset2d.c  delaunay2d.c  engine.c  forwardmodel_f.c  forwardmodel_part1d.c  forwardmodel_part1d_hierarchical.c  forwardmodel_part2d.c  forwardmodel_part2d_hierarchical.c  forwardmodel_single.c  forwardmodel_util.c  forwardmodelparameter.c  part1d_forwardmodel.c  part1d_natural_rj.c  part1d_regression_rj.c  part1d_zero.c  part2d_forwardmodel.c  part2d_regression_rj.c  position_map1d.c  position_map2d.c  position_map2d_delaunay.c  position_map2d_linear.c  position_map2d_quadtree.c  quadtree.c  regression.c  regression_part1d.c  regression_part1d_natural.c  regression_part1d_zero.c  regression_part2d.c  resultset1d.c  resultset1dfm.c  resultset2d.c  resultset2dfm.c  resultsetfm.c  rjmcmc_debug.c  (+4 more)
tests/: Makefile  Makefile.am  Makefile.in  curvefit_tests.c  dataset1d_tests.c  delaunay2d_tests.c  part1d_forwardmodel_tests.c  part1d_regression_tests.c  part2d_forwardmodel_tests.c  position_map1d_thrash.c  position_map2d_tests.c  position_map_tests.c  profile_position_map2d.c  quadtree_tests.c  random_tests.c  resultset2dfm_tests.c  util_tests.c
(+1287 files in other folders)
