
nobase_include_HEADERS = \
	rjmcmc/bbox2d.h \
	rjmcmc/curvefit.h \
	rjmcmc/dataset1d.h \
	rjmcmc/dataset2d.h \
	rjmcmc/delaunay2d.h \
	rjmcmc/engine.h \
	rjmcmc/forwardmodel.h \
	rjmcmc/forwardmodel_f.h \
	rjmcmc/forwardmodel_mpi.h \
	rjmcmc/forwardmodelparameter.h \
	rjmcmc/forwardmodel_util.h \
	rjmcmc/part1d_forwardmodel.h \
	rjmcmc/part1d_natural_rj.h \
	rjmcmc/part1d_regression_rj.h \
	rjmcmc/part1d_zero.h \
	rjmcmc/part2d_forwardmodel.h \
	rjmcmc/part2d_regression_rj.h \
	rjmcmc/position_map1d.h \
	rjmcmc/position_map2d.h \
	rjmcmc/position_map2d_delaunay.h \
	rjmcmc/position_map2d_linear.h \
	rjmcmc/position_map2d_quadtree.h \
	rjmcmc/quadtree.h \
	rjmcmc/regression.h \
	rjmcmc/regression_mpi.h \
	rjmcmc/resultset1dfm.h \
	rjmcmc/resultset1d.h \
	rjmcmc/resultset2dfm.h \
	rjmcmc/resultset2d.h \
	rjmcmc/resultsetfm.h \
	rjmcmc/rjmcmc_config.h \
	rjmcmc/rjmcmc.h \
	rjmcmc/rjmcmcf.h \
	rjmcmc/rjmcmcf_mpi.h \
	rjmcmc/rjmcmc_debug.h \
	rjmcmc/rjmcmc_defines.h \
	rjmcmc/rjmcmc_random.h \
	rjmcmc/rjmcmc_util.h \
	rjmcmc/single1d_regression.h \
	rjmcmc/single2d_regression.h \
	rjmcmc/voronoi2d.h \
	rjmcmc/wellrng.h

